--- a/Churchillhouse.html
+++ b/Churchillhouse.html
@@ -3,32 +3,36 @@
 <html>
      <head>
         <title>Churchill house background</title>
-        <link rel="stylesheet" type="text/css" href="assets/css/style2.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="wrapper"></div>
 <!--Ed1 nav setting good but the -->
-<nav>
-    <img src="assets/images/churchill-house-icon.png" alt="icon" width="150px">
+<div class="dropdown">
+    <nav>
+        <img class="logo" src="assets/images/churchill-house-icon.png">
         <ul>
             <li><a href="homepage.html">Home</a></li>
             <li><a href="#">Churchill House</a>
-            <ul>
-            <li><a href="Churchillhouse.html">Intro</a></li>
-            <li><a href="#">History</a></li>
-            <li><a href="#">Facilty</a></li>
-        </ul>
+                <ul>
+                    <li><a href="Churchillhouse.html">Intro</a></li>
+                    <li><a href="History.html">History</a></li>
+                    <li><a href="#">Facilty</a></li>
+                </ul>
             </li>
             <li><a href="#">Robin Boyd</a>
-            <ul>
-                <li><a href="#">About Robin Boyd</a></li>
-                <li><a href="#">History of Robin Boyd</a></li>
+                <ul>
+                    <li><a href="#">About Robin Boyd</a></li>
+                    <li><a href="#">History of Robin Boyd</a></li>
+                </ul>
             </li>
         </ul>
-</nav>
+    </nav>
+</div>
 <!--tpo row image html do not touch-->
     <header class="toprow-img">
-            <img src="assets/images/churchill-house-16.jpg" alt="Churchillhousedoor" class="responsive" width="100%">
+            <img src="assets/images/churchill-house-16.jpg" alt="Churchillhousedoor" class="responsive">
     </header>
 <!--content article done-->
 <article>
@@ -41,27 +45,31 @@
             <p>Although it has undergone some alterations over the years, the building still displays key features of the brutalist style with its large areas of blank wall and use off-form concrete, sloping structural fins and precast concrete non-loadbearing wall panels, precast fins for sun protection, and vertical slit windows. Churchill House displays a fairly restrained form in comparison with the major Canberra buildings that followed in this style: Cameron Offices, National Gallery of Australia and High Court of Australia.</p>
         </div>
 </article>            
-<!--footer ver 1-->
+<!--footer ver 2-->
 <footer class="footer-container">
-                <div class="footer-row1">
-                        <img src="assets/images/churchill-house-icon.png" >
-                </div>
-                <div class="footer-row2">
-                </div>
-                <div class="footer-row3">Churchill House & All Facilty
-                        <ul>
-                            <li><a href="homepage.html">Homepage</a></li>
-                            <li><a href="Churchillhouse.html">Background of Churchill house</a></li>
-                            <li><a href="#">Main Building</a></li>
-                            <li><a href="#">North Wing</a></li>
-                        </ul>
-                </div>
-                <div class="footer-row4">Robin Boyd
-                        <ul>
-                            <li><a href="#">Background of Robin Boyd</a>
-                            </li>
-                        </ul>
-                </div>
+    <div class="footer-row1">
+            <img src="assets/images/churchill-house-icon.png" alt="icon" width="200px">
+    </div>
+    </div>
+    <div class="footer-row3">Churchill House & All Facilty
+            <ul>
+                <li><a href="homepage.html">Homepage</a></li>
+                <li><a href="Churchillhouse.html">Background of Churchill house</a></li>
+                <li><a href="History.html">History of Churchill house</a></li>
+                <li><a href="#">Main Building</a></li>
+                <li><a href="#">North Wing</a></li>
+            </ul>
+    </div>
+    <div class="footer-row4">Robin Boyd
+            <ul>
+                <li><a href="#">History of Robin Boyd</a>
+                <li><a href="#">Background of Robin Boyd</a>
+                </li>
+            </ul>
+    </div>
 </footer>
+<div class="footer-text">
+    <p> This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2021.</p>
+</div>
         </body>
 </html>
