--- a/Churchillhouse.html
+++ b/Churchillhouse.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="wrapper"></div>
-<!--Ed1 nav setting good but the -->
+<!--ver2 nav-->
 <div class="dropdown">
     <nav>
         <img class="logo" src="assets/images/churchill-house-icon.png">
@@ -18,13 +18,13 @@
                 <ul>
                     <li><a href="Churchillhouse.html">Intro</a></li>
                     <li><a href="History.html">History</a></li>
-                    <li><a href="#">Facilty</a></li>
+                    <li><a href="Facilty.html">Facilty</a></li>
                 </ul>
             </li>
             <li><a href="#">Robin Boyd</a>
                 <ul>
-                    <li><a href="#">About Robin Boyd</a></li>
-                    <li><a href="#">History of Robin Boyd</a></li>
+                    <li><a href="RobinBoyd.html">About Robin Boyd</a></li>
+                    <li><a href="RobinBoydhistory.html">History of Robin Boyd</a></li>
                 </ul>
             </li>
         </ul>
@@ -33,6 +33,7 @@
 <!--tpo row image html do not touch-->
     <header class="toprow-img">
             <img src="assets/images/churchill-house-16.jpg" alt="Churchillhousedoor" class="responsive">
+            <div>Open Systems House (former Churchill House) east wing. (ACT Heritage 2013)</div>
     </header>
 <!--content article done-->
 <article>
@@ -46,30 +47,29 @@
         </div>
 </article>            
 <!--footer ver 2-->
-<footer class="footer-container">
+<div class="footer-container">
     <div class="footer-row1">
-            <img src="assets/images/churchill-house-icon.png" alt="icon" width="200px">
-    </div>
+            <img src="assets/images/churchill-house-icon.png">
+            <div class="footer-text">
+                <p> This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2021.</p>
+            </div>
     </div>
     <div class="footer-row3">Churchill House & All Facilty
             <ul>
                 <li><a href="homepage.html">Homepage</a></li>
                 <li><a href="Churchillhouse.html">Background of Churchill house</a></li>
                 <li><a href="History.html">History of Churchill house</a></li>
-                <li><a href="#">Main Building</a></li>
-                <li><a href="#">North Wing</a></li>
+                <li><a href="Facilty.html">Main Building</a></li>
+                <li><a href="Facilty.html">North Wing</a></li>
             </ul>
     </div>
     <div class="footer-row4">Robin Boyd
             <ul>
-                <li><a href="#">History of Robin Boyd</a>
-                <li><a href="#">Background of Robin Boyd</a>
+                <li><a href="RobinBoyd.html">Background of Robin Boyd</a>
+                <li><a href="RobinBoydhistory.html">History of Robin Boyd</a>
                 </li>
             </ul>
     </div>
-</footer>
-<div class="footer-text">
-    <p> This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2021.</p>
 </div>
         </body>
 </html>
