--- a/homepage.html
+++ b/homepage.html
@@ -17,52 +17,53 @@
                         <ul>
                             <li><a href="Churchillhouse.html">Intro</a></li>
                             <li><a href="History.html">History</a></li>
-                            <li><a href="#">Facilty</a></li>
+                            <li><a href="Facilty.html">Facilty</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Robin Boyd</a>
                         <ul>
-                            <li><a href="#">About Robin Boyd</a></li>
-                            <li><a href="#">History of Robin Boyd</a></li>
+                            <li><a href="RobinBoyd.html">About Robin Boyd</a></li>
+                            <li><a href="RobinBoydhistory.html">History of Robin Boyd</a></li>
                         </ul>
                     </li>
                 </ul>
             </nav>
         </div>
 <!--image row-->    
-            <div class="row">
-                <div class="column">
-                    <img src="assets/images/churchill-house-14.jpg">      
+            <div class="rowho">
+                <div class="columnho">
+                    <img src="assets/images/churchill-house-14.jpg">
+                    <div class="bottom right">Open Systems House (former Churchill House) south wing. (ACT Heritage 2013)</div>   
                 </div>
-                <div class="column">
+                <div class="columnho1">
                     <img src="assets/images/extra2-robin boyd portrait-copyright-Mark-Strizic.jpg">
+                    <div>extra2-robin boyd portrait copyright Mark Strizic</div>
                 </div>
-            </div>
+            </div>  
 <!--footer ver 2-->
-<footer class="footer-container">
+<div class="footer-container">
     <div class="footer-row1">
-            <img src="assets/images/churchill-house-icon.png" alt="icon">
-    </div>
+            <img src="assets/images/churchill-house-icon.png">
+            <div class="footer-text">
+                <p> This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2021.</p>
+            </div>
     </div>
     <div class="footer-row3">Churchill House & All Facilty
             <ul>
                 <li><a href="homepage.html">Homepage</a></li>
                 <li><a href="Churchillhouse.html">Background of Churchill house</a></li>
                 <li><a href="History.html">History of Churchill house</a></li>
-                <li><a href="#">Main Building</a></li>
-                <li><a href="#">North Wing</a></li>
+                <li><a href="Facilty.html">Main Building</a></li>
+                <li><a href="Facilty.html">North Wing</a></li>
             </ul>
     </div>
     <div class="footer-row4">Robin Boyd
             <ul>
-                <li><a href="#">History of Robin Boyd</a>
-                <li><a href="#">Background of Robin Boyd</a>
+                <li><a href="RobinBoyd.html">Background of Robin Boyd</a>
+                <li><a href="RobinBoydhistory.html">History of Robin Boyd</a>
                 </li>
             </ul>
     </div>
-</footer>
-<div class="footer-text">
-    <p> This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2021.</p>
 </div>
   </body>
 </html>
